[INFER] More robust handling when storing an unknown value to a known double, bug 617450.